@@ -8,6 +8,12 @@
 
 <h1 style="align:center">Rasqal RDF Query Library - News</h1>
 
+<h2>2005-??-?? Version 0.9.11 Released</h2>
+
+<p>Not yet released.
+</p>
+
+
 <h2>2005-06-09 Version 0.9.10 Released</h2>
 
 <p>The query engine now supports sorting query results
